--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
 springBoot {
     buildInfo {
         properties {
-            group = 'lk.w3Academy'
+            group = 'lk.sanchanaBagShop'
             version = '0.0.1-SNAPSHOT'
             sourceCompatibility = '11'
         }
@@ -34,7 +34,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 //twilio - to send SMS
     implementation group: "com.twilio.sdk", name: "twilio", version: "7.42.0"
 //=========================Springboot cache=========//
@@ -62,7 +61,7 @@ dependencies {
 // https://mvnrepository.com/artifact/org.webjars/pdf-js
     compile group: 'org.webjars', name: 'pdf-js', version: '2.3.200'
 // https://mvnrepository.com/artifact/org.webjars.npm/chart.js
-   /* group: 'org.webjars.npm', name: 'chart.js', version: '2.9.3'*/
+    compile group: 'org.webjars.npm', name: 'chart.js', version: '2.9.3'
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-gradle-plugin -- from build jar file
     compile group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '2.2.2.RELEASE', ext: 'pom'
     //====== use as three jars use to enable eh caches -> // https://mvnrepository.com/artifact/org.ehcache/ehcache
