--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
 springBoot {
     buildInfo {
         properties {
-            group = 'lk.bag_shop'
+            group = 'lk.samarasingher_super'
             version = '0.0.1-SNAPSHOT'
             sourceCompatibility = '11'
         }
